--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "account-table",
+  "name": "Account-Book",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.18.0-beta.1",
     "@vue/cli-plugin-babel": "~4.5.11",
     "@vue/cli-plugin-eslint": "~4.5.11",
     "@vue/cli-plugin-router": "~4.5.11",
@@ -23,6 +24,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "lodash": "^4.17.21",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2"
   }
